  variables is included)
- Revamp panel data estimation: redefine the "panel" command for
  fixed- or random-effects estimation, rename the old "panel"
  command as "paneldat"
- Lags in main window: make these visible "under" their parent
  variable, via a "twisty" triangle
- Revamp multiple-precision models: add more statistics, and make
  them available for capture via genr

3/24/2006 version 1.5.1
- Add matrix manipulation functionality
- Fix translation bug for VAR menus
- Fix bug in assignment of values returned from user-defined
  functions
- Small fix for helpfile formatting
- Add calculation of Gini coefficient and Lorenz curve to GUI
  Variable menu
- Provide option of including seasonal dummy variables in
  Dickey-Fuller tests
- Add two more "genr" functions: qnorm (quantiles of normal
  distribution) and gini (Gini coefficient)
- Fix some bugs in handling of named lists, and start documenting
  this properly
- Enforce use of '.' as decimal separator in genr formulae
- Fix filename encoding issue with opening of CSV files
- Eliminate deprecated command "sim"
- Extend maximum length of variable names to 15 characters
- Disable "shell" command by default (it can be enabled under
  /File/Preferences)
- Change the names of the internal variables coeff, stderr and
  rho to $coeff, $stderr and $rho
- Add various keyboard shortcuts to main window, including 
  Alt-X for a "gretl minibuffer" a la Emacs
- Time series model menu: add option for selecting optimal
  lag length for a VAR, based on information criteria
- VARs: add a "Tests" menu item to GUI VAR window, permitting
  tests for omission of exogenous variables (if any)
- Model window, Graphs menu: if the data are time series, add
  options to view the correlogram and periodogram of the
  residual from the model
- Add Hannan-Quinn criterion in all contexts where Akaike and
  and Schwartz criteria are shown
- Various fixes for model selection dialog
- win32: fix the issue whereby copy-and-pasted EMFs had a 