@@ -32,6 +32,12 @@ version 1.5.2, in progress
   variable, via a "twisty" triangle
 - Revamp multiple-precision models: add more statistics, and make
   them available for capture via genr
+- Add new commands: "discrete" (interpret variables as discrete),
+  "dummify" (create a set of summies coding for the values of a
+  discrete variable), and "xtab" (cross-tabulation of two discrete
+  variables)
+- Revamp test for differences of two means in the GUI hypothesis
+  test calculator
 
 3/24/2006 version 1.5.1
 - Add matrix manipulation functionality
